fix: Horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,9 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
-html {
-    overflow-x: hidden;
+html,
+body {
+    background-color: rgb(41, 39, 44);
 }
 
 @font-face {
